--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev" :"nodemon server.js",
+    "dev": "nodemon server.js",
     "build:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/tailwind.css --minify",
     "watch:css": "npx tailwindcss -i ./public/css/input.css -o ./public/css/tailwind.css --watch"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10"
